# LernApp

./: Links.txt  QSqlKlassen.png~  curlCommand.txt
Installer/FirstTryInstaller/config/: config.xml
LernappQuick/: .gitignore  CMakeLists.txt  Main.qml  backend.cpp  backend.h  database.cpp  database.h  main.cpp  network.cpp  network.h  networtbackend.cpp  networtbackend.h
LernappQuick/android/: AndroidManifest.xml
ServerWebTest/: CMakeLists.txt  main.cpp
Wireframe/: Wireframe_Ausbilder_Gimp.xcf  Wireframe_Auszubildender.png~  Wireframe_Auszubildender_Krita.kra  Wireframe_Auszubildender_Krita.kra~
devLernapp/: CMakeLists.txt  lernapp.cpp  lernapp.h  lernapp.ui  main.cpp
devLernapp/android/: AndroidManifest.xml
devLernapp/dependencies/curl_install/lib/cmake/CURL/: CURLConfig.cmake  CURLConfigVersion.cmake  CURLTargets-noconfig.cmake  CURLTargets.cmake
devLernapp/dependencies/curl_install/lib/pkgconfig/: libcurl.pc
devLernapp/dependencies/curl_install/share/man/man1/: curl-config.1  curl.1  mk-ca-bundle.1
devLernapp/dependencies/curl_install/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EARLYDATA_SENT_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTPAUTH_USED.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_POSTTRANSFER_TIME_T.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  (+465 more)
devLernappBackup/: .gitignore  lernapp.h
devLernappBackup/android/: AndroidManifest.xml
testFtpServer/: CMakeLists.txt  ftpdatachannel.cpp  ftpdatachannel.h  mainwindow.h
testServer/: main.cpp
testing/ServerWebTest/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
testing/testFtpServer/: ftpcontrolchannel.cpp  ftpcontrolchannel.h  ftpdatachannel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
testing/testServer/: CMakeLists.txt  ftpsclient.cpp  ftpsclient.h  main.cpp
